# satmogs-network-client

./: .gitignore  data_1755639_2020-02-24T21-45-25  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
api/: README.md
sat-nogs-db-client/: README.md  pyproject.toml  tesst.py
sat-nogs-db-client/sat_nogs_db_client/: __init__.py
sat-nogs-db-client/sat_nogs_db_client/api/artifacts/: artifacts_create.py  artifacts_list.py  artifacts_retrieve.py
sat-nogs-db-client/sat_nogs_db_client/api/modes/: modes_list.py  modes_retrieve.py
sat-nogs-db-client/sat_nogs_db_client/models/: __init__.py  artifact.py  iaru_coordination_enum.py  latest_tle_set.py  mode.py  modes_list_format.py  modes_retrieve_format.py  new_artifact.py  new_artifact_request.py  optical_identification.py  optical_observation.py  optical_observation_create.py  optical_observation_create_request.py  optical_observation_data.py  paginated_artifact_list.py  paginated_telemetry_list.py  satellite.py  satellite_associated_satellites.py  satellite_telemetries.py  satellites_create_format.py  satellites_list_format.py  satellites_retrieve_format.py  service_enum.py  status_enum.py  telemetry.py  telemetry_associated_satellites.py  telemetry_create_format.py  telemetry_list_format.py  telemetry_request.py  telemetry_retrieve_format.py  tle_list_format.py  tle_retrieve_format.py  transmitter.py  transmitter_itu_notification.py  transmitter_request.py  transmitter_request_itu_notification.py  transmitters_create_format.py  transmitters_list_format.py  transmitters_retrieve_format.py  type_enum.py
(+126 files in other folders)
