[tool.poetry]
name = "satnogs-fetcher"
version = "0.1.0"
description = "A Python client for interacting with the SATNOGS Network API."
authors = ["evgeniy.gleba <glebajk@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "satnogs_fetcher"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
urllib3 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
